[package]
name = "iksemel"
version = "0.1.1"
edition = "2021"
authors = ["Süleyman Poyraz", "Gurer Ozen"]
description = "XML parser for Rust"
license = "LGPL-2.1"

[lib]
name = "iksemel"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"
sha1 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
native-tls = "0.2"

[[bin]]
name = "ikslint"
path = "tools/ikslint.rs"

[[bin]]
name = "iksperf"
path = "tools/iksperf.rs"

[[bin]]
name = "iksroster"
path = "tools/iksroster.rs"

